service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traffic-dashboard-service
  namespace: traffic-app-ns
spec:
  type: ClusterIP
  selector:
    app: traffic-dashboard
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000


# (serves the Dashboard only)
