traffic-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traffic-ingress
  namespace: traffic-app-ns
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:


  #  Second rule: this one is for you when using the domain 
  - host: smarttraffic.hassanmaher.tech
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: traffic-dashboard-service
            port:
              number: 80
